# monorepo

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  Monorepo.sln  README.bazel.md  README.dotnet.md  README.md  REPO.bazel  go.mod  go.sum  nuget.deps.json  nuget_deps.bzl  nuget_deps.extension.bzl  update.sh
apps/Bruh/: BUILD.bazel  Bruh.csproj  packages.lock.json
apps/Bruh.Lib/: BUILD.bazel  Class1.cs
apps/Bruh.Lib/Extension/: FancyExtension.cs
apps/Bruh.Test/: BUILD.bazel  Bruh.Test.csproj  UnitTest1.cs
apps/Bruh.Web/: BUILD.bazel  Bruh.Web.csproj  Bruh.Web.http  Program.cs  WeatherController.cs
apps/ImmichLens/: .gitignore  README.md
apps/ImmichLens/ImmichLens/: ImmichLensApp.swift
apps/ImmichLens/ImmichLens.xcodeproj/: project.pbxproj
apps/ImmichLens/ImmichLens.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
apps/ImmichLens/ImmichLens.xcodeproj/project.xcworkspace/xcuserdata/adam.xcuserdatad/: UserInterfaceState.xcuserstate
apps/ImmichLens/ImmichLens.xcodeproj/xcuserdata/adam.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
apps/ImmichLens/ImmichLens.xcodeproj/xcuserdata/adam.xcuserdatad/xcschemes/: ImmichLens.xcscheme  (+1 more)
apps/ImmichLens/ImmichLens/Api/: APIService.swift  AuthMiddleware.swift  KeychainManager.swift
apps/ImmichLens/ImmichLens/Assets.xcassets/Icons.brandassets/: Contents.json
apps/ImmichLens/ImmichLens/Auth/: AccountLoginView.swift  AuthView.swift  LoginView.swift  ServerConnectionView.swift  ServerUrlView.swift
apps/ImmichLens/ImmichLens/Media/: AssetViewerView.swift  ImageViewerView.swift  MediaDetailView.swift  MediaThumbnailView.swift  MediaView.swift  TimelineGridView.swift  TimelineView.swift  VideoDurationOverlay.swift  VideoPlayerView.swift
apps/ImmichLens/ImmichLens/Media/Models/: Asset.swift
apps/dbot/: README.md
apps/dbot/src/DBot.Bot/: .gitignore  BUILD.bazel  DBot.Bot.csproj  Program.cs  appsettings.Development.json  appsettings.json  packages.lock.json
apps/dbot/src/DBot.Bot/Configuration/: DiscordBotConfiguration.cs  DiscordBotsConfiguration.cs
apps/dbot/src/DBot.Bot/Embeds/: AssettoServerEmbedFactory.cs  StatusEmbedGenerator.cs
apps/dbot/src/DBot.Bot/Hosting/: AssettoServerMonitorService.cs  DiscordBotService.cs
apps/dbot/src/DBot.Bot/InteractionModules/: AssettoServerCommandModule.cs  AssettoServerInteractionModule.cs  MessageCommandModule.cs  MessageInteractionsModule.cs  RoleMirrorCommandModule.cs
apps/dbot/src/DBot.Bot/InteractionModules/Autocomplete/: RoleMirrorSourceRoleAutocompleteHandler.cs  RoleMirrorTargetRoleAutocompleteHandler.cs
apps/dbot/src/DBot.Bot/Interfaces/: IAssettoServerService.cs
apps/dbot/src/DBot.Bot/Modals/: ServerDetailsModal.cs
apps/dbot/src/DBot.Bot/Models/Assetto/: AddServerResult.cs
apps/dbot/src/DBot.Bot/Properties/: launchSettings.json
apps/dbot/src/DBot.Bot/Services/: AssettoServerService.cs  AssettoStatusMessageGenerator.cs  DiscordBotManager.cs  RoleMirrorService.cs  RoleSyncService.cs
apps/dbot/src/DBot.Bot/Util/Time/: ClockFace.cs  ClockFaceUtil.cs  DateTimeExtensions.cs
apps/dbot/src/DBot.Core/: BUILD.bazel  DBot.Core.csproj  ef-add.sh  packages.lock.json
apps/dbot/src/DBot.Core/Data/Context/: ApplicationDbContext.cs
apps/dbot/src/DBot.Core/Data/Entities/: AssettoServerEntity.cs  AssettoServerGuildEntity.cs  AssettoServerMonitorEntity.cs  BaseEntity.cs  RoleMirrorCandidateEntity.cs  RoleMirrorMappingEntity.cs  RoleSync.cs
apps/dbot/src/DBot.Core/Migrations/: 20250419234329_InitialCreate.Designer.cs  20250419234329_InitialCreate.cs  20250420013407_RoleMirror.Designer.cs  20250420013407_RoleMirror.cs  20250420033534_AddSyncMode.Designer.cs  20250420033534_AddSyncMode.cs  ApplicationDbContextModelSnapshot.cs
apps/dbot/src/DBot.Integrations.Assetto/: AssettoServerClientFactory.cs  BUILD.bazel  DBot.Integrations.Assetto.csproj  IAssettoServerApi.cs  packages.lock.json
apps/dbot/src/DBot.Integrations.Assetto/Extensions/: ServiceCollectionExtensions.cs
apps/dbot/src/DBot.Integrations.Assetto/Models/: CMContentConfiguration.cs  DetailResponse.cs  EntryListResponse.cs  InfoResponse.cs  README.md
apps/dbot/src/DBot.Integrations.Assetto/Util/: TimeUtil.cs
apps/simple_dotnet/Bruh/: BUILD.bazel  packages.lock.json
apps/simple_dotnet/Bruh.Lib/: BUILD.bazel  packages.lock.json
apps/simple_dotnet/Bruh.Test/: BUILD.bazel
apps/simple_dotnet/Bruh.Web/: BUILD.bazel  Program.cs  packages.lock.json
apps/simple_dotnet/Bruh.Web/Properties/: launchSettings.json
apps/simple_dotnet/Example.Console/: BUILD.bazel  Example.Console.csproj  packages.lock.json
apps/simple_dotnet/Example.Lib/: BUILD.bazel  Class1.cs  Example.Lib.csproj
apps/simple_dotnet/Example.Lib/Extension/: FancyExtension.cs
apps/simple_dotnet/Example.Test/: BUILD.bazel  UnitTest1.cs  packages.lock.json
apps/simple_dotnet/Example.Web/: BUILD.bazel  Bruh.Web.http  Example.Web.csproj  WeatherController.cs  packages.lock.json
prelude/dotnet/: BUILD.bazel  defs.bzl  globalusings.bzl  oci.bzl  repo.bzl
tools/: BUILD.bazel  _run_under_cwd.sh
tools/dotnet/nuget2bazel/: BUILD.bazel  README.md  nuget2bazel.csproj  packages.lock.json
tools/dotnet/nuget2bazel/src/: Program.cs
tools/dotnet/nuget2bazel/src/CommandLine/: CommandHandler.cs  CommandLineOptions.cs
tools/dotnet/nuget2bazel/src/Core/: BazelFileGenerator.cs  NugetPackageAnalyzer.cs
tools/dotnet/nuget2bazel/src/Models/: DirectDependency.cs  RulesDotnetNugetPackage.cs
tools/dotnet/nuget2bazel/src/Services/: PackageDownloadService.cs  PackageMetadataService.cs
tools/dotnet/nuget2bazel/src/Utilities/: FrameworkUtilities.cs  HashUtilities.cs
tools/gazelle/dotnet/: BUILD.bazel  generate.go  kinds.go  language.go  resolve.go  target.go
tools/gazelle/dotnet/parser/: BUILD.bazel  csproj.go  lockfile.go
tools/gazelle/rules_dotnet/: BUILD.bazel  generate.go  language.go  nuget_query.go  parser.go
tools/gazelle/rules_dotnet/nuget_query/: BUILD.bazel  PackageAnalyzer.cs  Program.cs  nuget_query.csproj
tools/gazelle/rules_dotnet/nuget_query/Models/: BazelNugetPackage.cs  ProgramOutput.cs
(+4 files in other folders)
