bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")
bazel_dep(name = "aspect_rules_lint", version = "1.2.2")
bazel_dep(name = "buildifier_prebuilt", version = "8.0.1")
bazel_dep(name = "rules_multitool", version = "1.0.0")
bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "gazelle", version = "0.42.0")
bazel_dep(name = "rules_shell", version = "0.4.0")
bazel_dep(name = "rules_oci", version = "2.2.5")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_dotnet", version = "0.17.5")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//tools:tools.lock.json")
use_repo(multitool, "multitool")

#########################
# dotnet

# This is a temporary workaround until the rules_dotnet publishes a new version
# that includes this fix https://github.com/bazel-contrib/rules_dotnet/pull/470
git_override(
    module_name = "rules_dotnet",
    commit = "4b4d8323da63fdf2af847dc5482e376842889480",
    remote = "https://github.com/bazel-contrib/rules_dotnet.git",
)

dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
dotnet.toolchain(dotnet_version = "8.0.100")
use_repo(dotnet, "dotnet_toolchains")

register_toolchains("@dotnet_toolchains//:all")

nuget_packages_extension = use_extension("//prelude/dotnet:repo.bzl", "nuget_packages_extension")
nuget_packages_extension.from_file(
    nuget_deps = "//:nuget.deps.json",
)
use_repo(
    nuget_packages_extension,
    "nuget_apps_dbot_src_dbot.bot",
    "nuget_apps_dbot_src_dbot.core",
    "nuget_apps_dbot_src_dbot.integrations.assetto",
    "nuget_apps_simple_dotnet_example.console",
    "nuget_apps_simple_dotnet_example.lib",
    "nuget_apps_simple_dotnet_example.test",
    "nuget_apps_simple_dotnet_example.web",
    "nuget_tools_dotnet_nuget2bazel",
)

#########################
# Go
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.nogo(nogo = "//tools/lint:nogo")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
# Run 'bazel mod tidy' to update this
use_repo(
    go_deps,
    "com_github_bazelbuild_buildtools",
    "com_github_bmatcuk_doublestar_v4",
    "com_github_emirpasic_gods",
    "com_github_phsym_console_slog",
)

#########################
# oci

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "aspnet_chiseled",
    digest = "sha256:09d88164bedd70b05f12ecd463ddc7c9a5ebe12e4c2bb2bf50ce224049738d9f",  # 8.0.15-jammy-chiseled
    image = "mcr.microsoft.com/dotnet/aspnet:8.0-jammy-chiseled",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(
    oci,
    "aspnet_chiseled",
    "aspnet_chiseled_linux_amd64",
    "aspnet_chiseled_linux_arm64",
)
