load("@rules_dotnet//dotnet:defs.bzl", "csharp_library")

csharp_library(
    name = "Bruh.Lib",
    srcs = [
        "Class1.cs",
        "Extension/FancyExtension.cs",
    ],
    target_frameworks = ["net8.0"],
    visibility = ["//visibility:public"],
    deps = [
        "@nuget//faker.net/2.0.163",
        "@nuget//microsoft.net.stringtools/17.13.9",
    ],
)
