load("@rules_dotnet//dotnet:defs.bzl", "csharp_nunit_test")

csharp_nunit_test(
    name = "Bruh.Test",
    srcs = ["UnitTest1.cs"],
    target_frameworks = ["net8.0"],
    deps = [
        "@nuget//coverlet.collector/6.0.0",
        "@nuget//microsoft.net.test.sdk/",
        "@nuget//nunit.analyzers/3.9.0",
        "@nuget//nunit/3.14.0",
        "@nuget//nunit3testadapter/4.5.0",
    ],
)
