load("@rules_dotnet//dotnet:defs.bzl", "csharp_binary")

csharp_binary(
    name = "Bruh.Web",
    srcs = [
        "Program.cs",
        "WeatherController.cs",
    ],
    appsetting_files = ["appsettings.json"] + glob(["appsettings.*.json"]),
    project_sdk = "web",
    target_frameworks = ["net8.0"],
    deps = [
        "//apps/Bruh.Lib",
        "@nuget//microsoft.aspnetcore.openapi/8.0.8",
        "@nuget//swashbuckle.aspnetcore/6.4.0",
    ],
)
