load("@rules_dotnet//dotnet:defs.bzl", "csharp_binary")
load("//prelude/dotnet:defs.bzl", "csharp_globalusings")

csharp_binary(
    name = "Example",
    srcs = [
        "Program.cs",
        ":Example.GlobalUsings",
    ],
    nullable = "enable",
    target_frameworks = ["net8.0"],
    deps = [
        "//apps/simple_dotnet/Example.Lib",
        "@nuget_apps_simple_dotnet_example//system.text.json/9.0.3",
    ],
)

csharp_globalusings(
    name = "Example.GlobalUsings",
    sdk = "Microsoft.NET.Sdk",
)

csharp_binary(
    name = "Example.Console",
    srcs = [
        "Program.cs",
        ":Example.Console.GlobalUsings",
    ],
    nullable = "enable",
    target_frameworks = ["net8.0"],
    deps = [
        "//apps/simple_dotnet/Example.Lib",
        "@nuget_apps_simple_dotnet_example.console//system.text.json/9.0.3",
    ],
)

csharp_globalusings(
    name = "Example.Console.GlobalUsings",
    sdk = "Microsoft.NET.Sdk",
)
