load("@rules_dotnet//dotnet:defs.bzl", "csharp_binary")

csharp_binary(
    name = "nuget2bazel",
    srcs = [
        "src/CommandLine/CommandHandler.cs",
        "src/CommandLine/CommandLineOptions.cs",
        "src/Core/BazelFileGenerator.cs",
        "src/Core/NugetPackageAnalyzer.cs",
        "src/Models/DirectDependency.cs",
        "src/Models/RulesDotnetNugetPackage.cs",
        "src/Program.cs",
        "src/Services/PackageDownloadService.cs",
        "src/Services/PackageMetadataService.cs",
        "src/Utilities/FrameworkUtilities.cs",
        "src/Utilities/HashUtilities.cs",
    ],
    target_frameworks = ["net8.0"],
    visibility = ["//visibility:public"],
    deps = [
        "@nuget_tools_dotnet_nuget2bazel//nuget.frameworks/6.13.2",
        "@nuget_tools_dotnet_nuget2bazel//nuget.packagemanagement/6.13.2",
        "@nuget_tools_dotnet_nuget2bazel//nuget.packaging/6.13.2",
        "@nuget_tools_dotnet_nuget2bazel//nuget.projectmodel/6.13.2",
        "@nuget_tools_dotnet_nuget2bazel//nuget.versioning/6.13.2",
        "@nuget_tools_dotnet_nuget2bazel//system.commandline/2.0.0-beta4.22272.1",
    ],
)
